y.output
Terminals unused in grammar

   l_symb


State 2 conflicts: 27 shift/reduce
State 5 conflicts: 1 shift/reduce
State 19 conflicts: 27 shift/reduce
State 24 conflicts: 27 shift/reduce
State 31 conflicts: 27 shift/reduce
State 53 conflicts: 1 shift/reduce
State 57 conflicts: 49 reduce/reduce
State 58 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 64 conflicts: 1 shift/reduce, 74 reduce/reduce
State 66 conflicts: 24 shift/reduce
State 68 conflicts: 4 shift/reduce
State 74 conflicts: 2 shift/reduce
State 77 conflicts: 1 shift/reduce
State 84 conflicts: 2 shift/reduce
State 86 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 95 conflicts: 2 shift/reduce
State 97 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 106 conflicts: 4 shift/reduce
State 111 conflicts: 1 shift/reduce
State 113 conflicts: 1 shift/reduce
State 115 conflicts: 2 shift/reduce
State 116 conflicts: 2 shift/reduce
State 119 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce, 2 reduce/reduce
State 121 conflicts: 1 shift/reduce
State 224 conflicts: 3 reduce/reduce
State 225 conflicts: 3 reduce/reduce
State 226 conflicts: 3 reduce/reduce
State 231 conflicts: 6 reduce/reduce
State 234 conflicts: 1 shift/reduce
State 238 conflicts: 2 reduce/reduce
State 315 conflicts: 1 shift/reduce
State 336 conflicts: 1 shift/reduce
State 350 conflicts: 1 shift/reduce
State 362 conflicts: 1 shift/reduce
State 377 conflicts: 4 shift/reduce
State 403 conflicts: 1 shift/reduce
State 439 conflicts: 1 shift/reduce
State 455 conflicts: 1 shift/reduce
State 461 conflicts: 1 shift/reduce
State 469 conflicts: 97 reduce/reduce
State 514 conflicts: 1 shift/reduce
State 523 conflicts: 1 shift/reduce
State 531 conflicts: 1 shift/reduce
State 606 conflicts: 2 reduce/reduce
State 622 conflicts: 74 reduce/reduce
State 629 conflicts: 2 reduce/reduce
State 638 conflicts: 74 reduce/reduce


Grammar

    0 $accept: START $end

    1 START: CODE

    2 CODE: ANYTHING
    3     | CODE ANYTHING

    4 INTERNAL_CODE: %empty
    5              | CODE

    6 CODE_MARK_LIST: CODE
    7               | CODE_MARK_LIST l_name ':' CODE

    8 ANYTHING: VAR_DEF ';'
    9         | VAR_DEF
   10         | '{' CODE_MARK_LIST '}'
   11         | EXPR_LIST ';'
   12         | EXPR_LIST
   13         | FUNC_DEF
   14         | CLASS_DEF
   15         | SWITCH_DEF
   16         | WHILE_DEF
   17         | FOR_DEF
   18         | IF_DEF
   19         | TRY_CATCH_DEF
   20         | l_continue ';'
   21         | l_continue
   22         | l_break ';'
   23         | l_break
   24         | l_yield ';'
   25         | l_yield
   26         | l_throw ';'
   27         | l_throw
   28         | l_return ';'
   29         | l_return
   30         | l_break EXPR_LIST ';'
   31         | l_break EXPR_LIST
   32         | l_yield EXPR_LIST ';'
   33         | l_yield EXPR_LIST
   34         | l_throw EXPR_LIST ';'
   35         | l_throw EXPR_LIST
   36         | l_return EXPR_LIST ';'
   37         | l_return EXPR_LIST
   38         | DO_WHILE_DEF ';'
   39         | DO_WHILE_DEF
   40         | IMPORT_DEF
   41         | EXPORT_DEF
   42         | ';'

   43 EXPORT_DEF: l_export l_name
   44           | l_export l_name l_from l_str
   45           | l_export '{' NAME_LIST '}'
   46           | l_export '{' NAME_LIST '}' l_from l_str

   47 IMPORT_DEF: l_import l_name
   48           | l_import l_name l_from l_str
   49           | l_import '{' NAME_LIST '}'
   50           | l_import '{' NAME_LIST '}' l_from l_str

   51 NAME_LIST: l_name
   52          | NAME_LIST ',' l_name

   53 TRY_CATCH_DEF: l_try '{' INTERNAL_CODE '}' l_catch '(' EXPR ')' '{' INTERNAL_CODE '}'

   54 IF_DEF: l_if '(' EXPR_LIST ')' ANYTHING
   55       | l_if '(' EXPR_LIST ')' ANYTHING l_else ANYTHING

   56 EMPTY_OR_EXPR: %empty
   57              | EXPR_LIST

   58 FOR_DEF: l_for '(' ';' EMPTY_OR_EXPR ';' EMPTY_OR_EXPR ')' ANYTHING
   59        | l_for '(' VAR_DEF ';' EMPTY_OR_EXPR ';' EMPTY_OR_EXPR ')' ANYTHING
   60        | l_for '(' EXPR_LIST ';' EMPTY_OR_EXPR ';' EMPTY_OR_EXPR ')' ANYTHING
   61        | l_for '(' FUNC_DEF ';' EMPTY_OR_EXPR ';' EMPTY_OR_EXPR ')' ANYTHING
   62        | l_for '(' CLASS_DEF ';' EMPTY_OR_EXPR ';' EMPTY_OR_EXPR ')' ANYTHING
   63        | l_for '(' INEXPR ')' ANYTHING
   64        | l_for '(' l_var l_name l_in EXPR ')' ANYTHING
   65        | l_for '(' l_let l_name l_in EXPR ')' ANYTHING

   66 DO_WHILE_DEF: l_do '{' CODE '}' l_while '(' EXPR_LIST ')'

   67 WHILE_DEF: l_while '(' EXPR_LIST ')' ANYTHING

   68 SWITCH_DEF: l_switch '(' EXPR_LIST ')' '{' SWITCH_INTERNAL '}'

   69 SWITCH_INTERNAL: SWITCH_UNIT
   70                | SWITCH_INTERNAL SWITCH_UNIT

   71 SWITCH_UNIT: l_case EXPR ':' INTERNAL_CODE
   72            | l_default ':' INTERNAL_CODE

   73 CLASS_DEF: l_class l_name '{' '}'
   74          | l_class l_name '{' CLASS_INTERNAL '}'
   75          | l_class l_name l_extends VAR_TERM '{' '}'
   76          | l_class l_name l_extends VAR_TERM '{' CLASS_INTERNAL '}'

   77 CLASS_INTERNAL: CLASS_UNIT
   78               | CLASS_INTERNAL ',' CLASS_UNIT
   79               | CLASS_INTERNAL CLASS_UNIT

   80 CLASS_UNIT: CLASS_FUNC
   81           | CLASS_CONSTRUCT
   82           | l_static CLASS_FUNC
   83           | l_static CLASS_CONSTRUCT
   84           | CLASS_GSET_UNIT
   85           | ';'

   86 CLASS_GSET_UNIT: l_get CLASS_FUNC
   87                | l_set CLASS_FUNC
   88                | l_static l_get CLASS_FUNC
   89                | l_static l_set CLASS_FUNC

   90 CLASS_FUNC: KEY_NAME '(' ')' '{' INTERNAL_CODE '}'
   91           | KEY_NAME '(' EXPR_LIST ')' '{' INTERNAL_CODE '}'

   92 CLASS_CONSTRUCT: l_constructor '(' ')' '{' INTERNAL_CODE '}'
   93                | l_constructor '(' EXPR_LIST ')' '{' INTERNAL_CODE '}'

   94 FUNC_DEF: l_function l_name '(' ')' '{' INTERNAL_CODE '}'
   95         | l_function l_name '(' EXPR_LIST ')' '{' INTERNAL_CODE '}'
   96         | l_async l_function l_name '(' ')' '{' INTERNAL_CODE '}'
   97         | l_async l_function l_name '(' EXPR_LIST ')' '{' INTERNAL_CODE '}'
   98         | '(' FUNC_OBJ ')' '(' EXPR_LIST ')'
   99         | '(' FUNC_OBJ ')' '(' ')'
  100         | FUNC_OBJ '(' EXPR_LIST ')'
  101         | FUNC_OBJ '(' ')'

  102 VAR_DEF: l_var VAR_DEF_LIST
  103        | l_let VAR_DEF_LIST
  104        | l_const VAR_DEF_LIST

  105 VAR_DEF_LIST: l_name
  106             | l_name '=' EXPR
  107             | '[' NAME_LIST ']'
  108             | '[' NAME_LIST ']' '=' EXPR
  109             | '{' NAME_LIST '}'
  110             | '{' NAME_LIST '}' '=' EXPR
  111             | VAR_DEF_LIST ',' l_name
  112             | VAR_DEF_LIST ',' l_name '=' EXPR

  113 OBJECT: '{' '}'
  114       | '{' OBJECT_FLD_LIST '}'
  115       | '{' CLASS_INTERNAL '}'

  116 OBJECT_FLD_LIST: OBJECT_FLD
  117                | OBJECT_FLD ','
  118                | OBJECT_FLD ',' OBJECT_FLD_LIST

  119 OBJECT_FLD: KEY_NAME
  120           | KEY_NAME ':' EXPR
  121           | KEY_NAME '(' ')' '{' INTERNAL_CODE '}'
  122           | KEY_NAME '(' EXPR_LIST ')' '{' INTERNAL_CODE '}'
  123           | CLASS_GSET_UNIT

  124 KEY_NAME: l_name
  125         | l_num
  126         | l_str
  127         | '[' EXPR ']'

  128 ARRAY: '[' ']'
  129      | '[' ARRAY_EXPR_LIST ']'

  130 ARRAY_EXPR_LIST: EXPR
  131                | ARRAY_EXPR_LIST ',' EXPR
  132                | ARRAY_EXPR_LIST ','

  133 EXPR_LIST: EXPR
  134          | EXPR_LIST ',' EXPR

  135 EXPR: NUM_EXPR
  136     | FUNC_EXPR

  137 FUNC_EXPR: FUNC_OBJ
  138          | l_async FUNC_OBJ
  139          | VAR_TERM '=' FUNC_EXPR

  140 FUNC_OBJ: l_function '(' ')' '{' INTERNAL_CODE '}'
  141         | l_function '(' EXPR_LIST ')' '{' INTERNAL_CODE '}'
  142         | '(' ')' o_arrow EXPR
  143         | '(' EXPR_LIST ')' o_arrow EXPR
  144         | '(' ')' o_arrow '{' INTERNAL_CODE '}'
  145         | '(' EXPR_LIST ')' o_arrow '{' INTERNAL_CODE '}'
  146         | '(' FUNC_EXPR ')'
  147         | VAR_TERM o_arrow EXPR
  148         | VAR_TERM o_arrow '{' INTERNAL_CODE '}'
  149         | FUNC_DEF

  150 INEXPR: NUM_EXPR l_in NUM_EXPR

  151 NUM_EXPR: TERM
  152         | NUM_EXPR '?' NUM_EXPR ':' NUM_EXPR
  153         | NUM_EXPR o_or NUM_EXPR
  154         | NUM_EXPR o_rsh NUM_EXPR
  155         | NUM_EXPR '|' NUM_EXPR
  156         | NUM_EXPR '^' NUM_EXPR
  157         | NUM_EXPR '/' NUM_EXPR
  158         | NUM_EXPR '%' NUM_EXPR
  159         | NUM_EXPR o_and NUM_EXPR
  160         | NUM_EXPR o_lsh NUM_EXPR
  161         | NUM_EXPR '+' NUM_EXPR
  162         | NUM_EXPR '*' NUM_EXPR
  163         | NUM_EXPR '&' NUM_EXPR
  164         | NUM_EXPR '-' NUM_EXPR
  165         | NUM_EXPR o_rshsh NUM_EXPR
  166         | NUM_EXPR '<' NUM_EXPR
  167         | NUM_EXPR '>' NUM_EXPR
  168         | NUM_EXPR o_moreeq NUM_EXPR
  169         | NUM_EXPR o_lesseq NUM_EXPR
  170         | NUM_EXPR o_eqeq NUM_EXPR
  171         | NUM_EXPR o_noteq NUM_EXPR
  172         | NUM_EXPR o_eqeqeq NUM_EXPR
  173         | NUM_EXPR o_noteqeq NUM_EXPR
  174         | NUM_EXPR l_instanceof NUM_EXPR
  175         | INEXPR
  176         | VAR_TERM '=' NUM_EXPR
  177         | VAR_TERM o_lsheq NUM_EXPR
  178         | VAR_TERM o_oreq NUM_EXPR
  179         | VAR_TERM o_xoreq NUM_EXPR
  180         | VAR_TERM o_rsheq NUM_EXPR
  181         | VAR_TERM o_diveq NUM_EXPR
  182         | VAR_TERM o_subeq NUM_EXPR
  183         | VAR_TERM o_addeq NUM_EXPR
  184         | VAR_TERM o_mlteq NUM_EXPR
  185         | VAR_TERM o_andeq NUM_EXPR
  186         | VAR_TERM o_modeq NUM_EXPR
  187         | VAR_TERM o_rshsheq NUM_EXPR

  188 TERM: l_num
  189     | l_str
  190     | REGSTR
  191     | l_null
  192     | l_true
  193     | l_false
  194     | VAR_TERM
  195     | o_inc VAR_TERM
  196     | o_dec VAR_TERM
  197     | VAR_TERM o_inc
  198     | VAR_TERM o_dec
  199     | UNOOP TERM
  200     | l_void TERM
  201     | l_typeof TERM
  202     | l_new VAR_TERM
  203     | l_delete VAR_TERM
  204     | l_await VAR_TERM
  205     | FUNC_OBJ

  206 VAR_TERM: l_name
  207         | l_this
  208         | l_super
  209         | l_str '.' l_name
  210         | ARRAY
  211         | OBJECT
  212         | VAR_TERM '.' l_name
  213         | VAR_TERM '.' l_get
  214         | VAR_TERM '.' l_set
  215         | VAR_TERM '.' l_constructor
  216         | VAR_TERM '.' l_from
  217         | VAR_TERM '.' l_new
  218         | VAR_TERM '.' l_delete
  219         | VAR_TERM '.' l_async
  220         | VAR_TERM '(' ')'
  221         | VAR_TERM '(' EXPR_LIST ')'
  222         | VAR_TERM '[' NUM_EXPR ']'
  223         | '(' NUM_EXPR ')'
  224         | '(' EXPR_LIST ')'
  225         | l_from

  226 REGSTR: '/' REGSTRSYMB_INS '/'
  227       | '/' REGSTRSYMB_INS '/' l_name

  228 REGSTRSYMB_INS: REGSTRSYMB
  229               | REGSTRSYMB_INS REGSTRSYMB

  230 REGSTRSYMB: SOME_LEXEMS
  231           | '\\' SOME_LEXEMS
  232           | '\\' '['
  233           | '\\' '/'
  234           | '\\' '\\'
  235           | '[' REG_SET ']'

  236 REG_SET: REG_SET_SYMB
  237        | REG_SET REG_SET_SYMB

  238 REG_SET_SYMB: SOME_LEXEMS
  239             | '\\' SOME_LEXEMS
  240             | '\\' '['
  241             | '\\' '/'
  242             | '\\' '\\'
  243             | '['
  244             | '/'

  245 SOME_LEXEMS: l_num
  246            | l_await
  247            | l_break
  248            | l_case
  249            | l_catch
  250            | l_class
  251            | l_const
  252            | l_constructor
  253            | l_continue
  254            | l_debugger
  255            | l_default
  256            | l_delete
  257            | l_do
  258            | l_else
  259            | l_enum
  260            | l_export
  261            | l_extends
  262            | l_false
  263            | l_finally
  264            | l_for
  265            | l_function
  266            | l_get
  267            | l_if
  268            | l_import
  269            | l_in
  270            | l_instanceof
  271            | l_let
  272            | l_new
  273            | l_null
  274            | l_return
  275            | l_set
  276            | l_static
  277            | l_super
  278            | l_switch
  279            | l_this
  280            | l_throw
  281            | l_true
  282            | l_try
  283            | l_typeof
  284            | l_var
  285            | l_void
  286            | l_while
  287            | l_with
  288            | l_yield
  289            | l_name
  290            | '~'
  291            | o_or
  292            | o_oreq
  293            | '|'
  294            | o_xoreq
  295            | '^'
  296            | '?'
  297            | o_rshsheq
  298            | o_rshsh
  299            | o_rsheq
  300            | o_rsh
  301            | o_moreeq
  302            | '>'
  303            | o_eqeqeq
  304            | o_eqeq
  305            | o_arrow
  306            | '='
  307            | o_lesseq
  308            | o_lsheq
  309            | o_lsh
  310            | '<'
  311            | o_dblcolon
  312            | ':'
  313            | ';'
  314            | '.'
  315            | o_subeq
  316            | o_dec
  317            | '-'
  318            | ','
  319            | o_addeq
  320            | o_inc
  321            | '+'
  322            | o_mlteq
  323            | '*'
  324            | ')'
  325            | '('
  326            | o_andeq
  327            | '&'
  328            | o_and
  329            | o_modeq
  330            | '%'
  331            | o_noteqeq
  332            | o_noteq
  333            | '!'
  334            | '}'
  335            | '{'
  336            | ']'
  337            | l_str
  338            | l_any_char

  339 UNOOP: '-'
  340      | '+'
  341      | '!'
  342      | '~'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 333 341
'%' (37) 158 330
'&' (38) 163 327
'(' (40) 53 54 55 58 59 60 61 62 63 64 65 66 67 68 90 91 92 93 94 95
    96 97 98 99 100 101 121 122 140 141 142 143 144 145 146 220 221
    223 224 325
')' (41) 53 54 55 58 59 60 61 62 63 64 65 66 67 68 90 91 92 93 94 95
    96 97 98 99 100 101 121 122 140 141 142 143 144 145 146 220 221
    223 224 324
'*' (42) 162 323
'+' (43) 161 321 340
',' (44) 52 78 111 112 117 118 131 132 134 318
'-' (45) 164 317 339
'.' (46) 209 212 213 214 215 216 217 218 219 314
'/' (47) 157 226 227 233 241 244
':' (58) 7 71 72 120 152 312
';' (59) 8 11 20 22 24 26 28 30 32 34 36 38 42 58 59 60 61 62 85 313
'<' (60) 166 310
'=' (61) 106 108 110 112 139 176 306
'>' (62) 167 302
'?' (63) 152 296
'[' (91) 107 108 127 128 129 222 232 235 240 243
'\\' (92) 231 232 233 234 239 240 241 242
']' (93) 107 108 127 128 129 222 235 336
'^' (94) 156 295
'{' (123) 10 45 46 49 50 53 66 68 73 74 75 76 90 91 92 93 94 95 96
    97 109 110 113 114 115 121 122 140 141 144 145 148 335
'|' (124) 155 293
'}' (125) 10 45 46 49 50 53 66 68 73 74 75 76 90 91 92 93 94 95 96
    97 109 110 113 114 115 121 122 140 141 144 145 148 334
'~' (126) 290 342
error (256)
l_await (258) 204 246
l_break (259) 22 23 30 31 247
l_case (260) 71 248
l_catch (261) 53 249
l_class (262) 73 74 75 76 250
l_const (263) 104 251
l_continue (264) 20 21 253
l_debugger (265) 254
l_default (266) 72 255
l_delete (267) 203 218 256
l_do (268) 66 257
l_else (269) 55 258
l_enum (270) 259
l_export (271) 43 44 45 46 260
l_extends (272) 75 76 261
l_false (273) 193 262
l_finally (274) 263
l_for (275) 58 59 60 61 62 63 64 65 264
l_function (276) 94 95 96 97 140 141 265
l_if (277) 54 55 267
l_import (278) 47 48 49 50 268
l_in (279) 64 65 150 269
l_instanceof (280) 174 270
l_let (281) 65 103 271
l_name (282) 7 43 44 47 48 51 52 64 65 73 74 75 76 94 95 96 97 105
    106 111 112 124 206 209 212 227 289
l_new (283) 202 217 272
l_null (284) 191 273
l_num (285) 125 188 245
l_return (286) 28 29 36 37 274
l_str (287) 44 46 48 50 126 189 209 337
l_super (288) 208 277
l_switch (289) 68 278
l_symb (290)
l_this (291) 207 279
l_throw (292) 26 27 34 35 280
l_true (293) 192 281
l_try (294) 53 282
l_typeof (295) 201 283
l_var (296) 64 102 284
l_void (297) 200 285
l_while (298) 66 67 286
l_with (299) 287
l_yield (300) 24 25 32 33 288
l_constructor (301) 92 93 215 252
l_get (302) 86 88 213 266
l_set (303) 87 89 214 275
l_static (304) 82 83 88 89 276
l_any_char (305) 338
l_from (306) 44 46 48 50 216 225
l_async (307) 96 97 138 219
o_addeq (308) 183 319
o_and (309) 159 328
o_andeq (310) 185 326
o_arrow (311) 142 143 144 145 147 148 305
o_dblcolon (312) 311
o_dec (313) 196 198 316
o_diveq (314) 181
o_eqeq (315) 170 304
o_inc (316) 195 197 320
o_lesseq (317) 169 307
o_lsh (318) 160 309
o_lsheq (319) 177 308
o_mlteq (320) 184 322
o_modeq (321) 186 329
o_moreeq (322) 168 301
o_noteq (323) 171 332
o_or (324) 153 291
o_oreq (325) 178 292
o_rsh (326) 154 300
o_rsheq (327) 180 299
o_subeq (328) 182 315
o_xoreq (329) 179 294
o_noteqeq (330) 173 331
o_eqeqeq (331) 172 303
o_rshsh (332) 165 298
o_rshsheq (333) 187 297


Nonterminals, with rules where they appear

$accept (104)
    on left: 0
START (105)
    on left: 1, on right: 0
CODE (106)
    on left: 2 3, on right: 1 3 5 6 7 66
INTERNAL_CODE (107)
    on left: 4 5, on right: 53 71 72 90 91 92 93 94 95 96 97 121 122
    140 141 144 145 148
CODE_MARK_LIST (108)
    on left: 6 7, on right: 7 10
ANYTHING (109)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
    27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42, on right: 2 3
    54 55 58 59 60 61 62 63 64 65 67
EXPORT_DEF (110)
    on left: 43 44 45 46, on right: 41
IMPORT_DEF (111)
    on left: 47 48 49 50, on right: 40
NAME_LIST (112)
    on left: 51 52, on right: 45 46 49 50 52 107 108 109 110
TRY_CATCH_DEF (113)
    on left: 53, on right: 19
IF_DEF (114)
    on left: 54 55, on right: 18
EMPTY_OR_EXPR (115)
    on left: 56 57, on right: 58 59 60 61 62
FOR_DEF (116)
    on left: 58 59 60 61 62 63 64 65, on right: 17
DO_WHILE_DEF (117)
    on left: 66, on right: 38 39
WHILE_DEF (118)
    on left: 67, on right: 16
SWITCH_DEF (119)
    on left: 68, on right: 15
SWITCH_INTERNAL (120)
    on left: 69 70, on right: 68 70
SWITCH_UNIT (121)
    on left: 71 72, on right: 69 70
CLASS_DEF (122)
    on left: 73 74 75 76, on right: 14 62
CLASS_INTERNAL (123)
    on left: 77 78 79, on right: 74 76 78 79 115
CLASS_UNIT (124)
    on left: 80 81 82 83 84 85, on right: 77 78 79
CLASS_GSET_UNIT (125)
    on left: 86 87 88 89, on right: 84 123
CLASS_FUNC (126)
    on left: 90 91, on right: 80 82 86 87 88 89
CLASS_CONSTRUCT (127)
    on left: 92 93, on right: 81 83
FUNC_DEF (128)
    on left: 94 95 96 97 98 99 100 101, on right: 13 61 149
VAR_DEF (129)
    on left: 102 103 104, on right: 8 9 59
VAR_DEF_LIST (130)
    on left: 105 106 107 108 109 110 111 112, on right: 102 103 104
    111 112
OBJECT (131)
    on left: 113 114 115, on right: 211
OBJECT_FLD_LIST (132)
    on left: 116 117 118, on right: 114 118
OBJECT_FLD (133)
    on left: 119 120 121 122 123, on right: 116 117 118
KEY_NAME (134)
    on left: 124 125 126 127, on right: 90 91 119 120 121 122
ARRAY (135)
    on left: 128 129, on right: 210
ARRAY_EXPR_LIST (136)
    on left: 130 131 132, on right: 129 131 132
EXPR_LIST (137)
    on left: 133 134, on right: 11 12 30 31 32 33 34 35 36 37 54 55
    57 60 66 67 68 91 93 95 97 98 100 122 134 141 143 145 221 224
EXPR (138)
    on left: 135 136, on right: 53 64 65 71 106 108 110 112 120 127
    130 131 133 134 142 143 147
FUNC_EXPR (139)
    on left: 137 138 139, on right: 136 139 146
FUNC_OBJ (140)
    on left: 140 141 142 143 144 145 146 147 148 149, on right: 98
    99 100 101 137 138 205
INEXPR (141)
    on left: 150, on right: 63 175
NUM_EXPR (142)
    on left: 151 152 153 154 155 156 157 158 159 160 161 162 163 164
    165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180
    181 182 183 184 185 186 187, on right: 135 150 152 153 154 155
    156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171
    172 173 174 176 177 178 179 180 181 182 183 184 185 186 187 222
    223
TERM (143)
    on left: 188 189 190 191 192 193 194 195 196 197 198 199 200 201
    202 203 204 205, on right: 151 199 200 201
VAR_TERM (144)
    on left: 206 207 208 209 210 211 212 213 214 215 216 217 218 219
    220 221 222 223 224 225, on right: 75 76 139 147 148 176 177 178
    179 180 181 182 183 184 185 186 187 194 195 196 197 198 202 203
    204 212 213 214 215 216 217 218 219 220 221 222
REGSTR (145)
    on left: 226 227, on right: 190
REGSTRSYMB_INS (146)
    on left: 228 229, on right: 226 227 229
REGSTRSYMB (147)
    on left: 230 231 232 233 234 235, on right: 228 229
REG_SET (148)
    on left: 236 237, on right: 235 237
REG_SET_SYMB (149)
    on left: 238 239 240 241 242 243 244, on right: 236 237
SOME_LEXEMS (150)
    on left: 245 246 247 248 249 250 251 252 253 254 255 256 257 258
    259 260 261 262 263 264 265 266 267 268 269 270 271 272 273 274
    275 276 277 278 279 280 281 282 283 284 285 286 287 288 289 290
    291 292 293 294 295 296 297 298 299 300 301 302 303 304 305 306
    307 308 309 310 311 312 313 314 315 316 317 318 319 320 321 322
    323 324 325 326 327 328 329 330 331 332 333 334 335 336 337 338,
    on right: 230 231 238 239
UNOOP (151)
    on left: 339 340 341 342, on right: 199


State 0

    0 $accept: . START $end

    l_await     shift, and go to state 1
    l_break     shift, and go to state 2
    l_class     shift, and go to state 3
    l_const     shift, and go to state 4
    l_continue  shift, and go to state 5
    l_delete    shift, and go to state 6
    l_do        shift, and go to state 7
    l_export    shift, and go to state 8
    l_false     shift, and go to state 9
    l_for       shift, and go to state 10
    l_function  shift, and go to state 11
    l_if        shift, and go to state 12
    l_import    shift, and go to state 13
    l_let       shift, and go to state 14
    l_name      shift, and go to state 15
    l_new       shift, and go to state 16
    l_null      shift, and go to state 17
    l_num       shift, and go to state 18
    l_return    shift, and go to state 19
    l_str       shift, and go to state 20
    l_super     shift, and go to state 21
    l_switch    shift, and go to state 22
    l_this      shift, and go to state 23
    l_throw     shift, and go to state 24
    l_true      shift, and go to state 25
    l_try       shift, and go to state 26
    l_typeof    shift, and go to state 27
    l_var       shift, and go to state 28
    l_void      shift, and go to state 29
    l_while     shift, and go to state 30
    l_yield     shift, and go to state 31
    l_from      shift, and go to state 32
    l_async     shift, and go to state 33
    o_dec       shift, and go to state 34
    o_inc       shift, and go to state 35
    '!'         shift, and go to state 36
    '('         shift, and go to state 37
    '+'         shift, and go to state 38
    '-'         shift, and go to state 39
    '/'         shift, and go to state 40
    ';'         shift, and go to state 41
    '['         shift, and go to state 42
    '{'         shift, and go to state 43
    '~'         shift, and go to state 44

    START          go to state 45
    CODE           go to state 46
    ANYTHING       go to state 47
    EXPORT_DEF     go to state 48
    IMPORT_DEF     go to state 49
    TRY_CATCH_DEF  go to state 50
    IF_DEF         go to state 51
    FOR_DEF        go to state 52
    DO_WHILE_DEF   go to state 53
    WHILE_DEF      go to state 54
    SWITCH_DEF     go to state 55
    CLASS_DEF      go to state 56
    FUNC_DEF       go to state 57
    VAR_DEF        go to state 58
    OBJECT         go to state 59
    ARRAY          go to state 60
    EXPR_LIST      go to state 61
    EXPR           go to state 62
    FUNC_EXPR      go to state 63
    FUNC_OBJ       go to state 64
    INEXPR         go to state 65
    NUM_EXPR       go to state 66
    TERM           go to state 67
    VAR_TERM       go to state 68
    REGSTR         go to state 69
    UNOOP          go to state 70


State 1

  204 TERM: l_await . VAR_TERM

    l_name   shift, and go to state 15
    l_str    shift, and go to state 71
    l_super  shift, and go to state 21
    l_this   shift, and go to state 23
    l_from   shift, and go to state 32
    '('      shift, and go to state 72
    '['      shift, and go to state 42
    '{'      shift, and go to state 73

    OBJECT    go to state 59
    ARRAY     go to state 60
    VAR_TERM  go to state 74


State 2

   22 ANYTHING: l_break . ';'
   23         | l_break .
   30         | l_break . EXPR_LIST ';'
   31         | l_break . EXPR_LIST

    l_await     shift, and go to state 1
    l_delete    shift, and go to state 6
    l_false     shift, and go to state 9
    l_function  shift, and go to state 11
    l_name      shift, and go to state 15
    l_new       shift, and go to state 16
    l_null      shift, and go to state 17
    l_num       shift, and go to state 18
    l_str       shift, and go to state 20
    l_super     shift, and go to state 21
    l_this      shift, and go to state 23
    l_true      shift, and go to state 25
    l_typeof    shift, and go to state 27
    l_void      shift, and go to state 29
    l_from      shift, and go to state 32
    l_async     shift, and go to state 33
    o_dec       shift, and go to state 34
    o_inc       shift, and go to state 35
    '!'         shift, and go to state 36
    '('         shift, and go to state 37
    '+'         shift, and go to state 38
    '-'         shift, and go to state 39
    '/'         shift, and go to state 40
    ';'         shift, and go to state 75
    '['         shift, and go to state 42
    '{'         shift, and go to state 73
    '~'         shift, and go to state 44

    l_await     [reduce using rule 23 (ANYTHING)]
    l_delete    [reduce using rule 23 (ANYTHING)]
    l_false     [reduce using rule 23 (ANYTHING)]
    l_function  [reduce using rule 23 (ANYTHING)]
    l_name      [reduce using rule 23 (ANYTHING)]
    l_new       [reduce using rule 23 (ANYTHING)]
    l_null      [reduce using rule 23 (ANYTHING)]
    l_num       [reduce using rule 23 (ANYTHING)]
    l_str       [reduce using rule 23 (ANYTHING)]
    l_super     [reduce using rule 23 (ANYTHING)]
    l_this      [reduce using rule 23 (ANYTHING)]
    l_true      [reduce using rule 23 (ANYTHING)]
    l_typeof    [reduce using rule 23 (ANYTHING)]
    l_void      [reduce using rule 23 (ANYTHING)]
    l_from      [reduce using rule 23 (ANYTHING)]
    l_async     [reduce using rule 23 (ANYTHING)]
    o_dec       [reduce using rule 23 (ANYTHING)]
    o_inc       [reduce using rule 23 (ANYTHING)]
    '!'         [reduce using rule 23 (ANYTHING)]
    '('         [reduce using rule 23 (ANYTHING)]
    '+'         [reduce using rule 23 (ANYTHING)]
    '-'         [reduce using rule 23 (ANYTHING)]
    '/'         [reduce using rule 23 (ANYTHING)]
    ';'         [reduce using rule 23 (ANYTHING)]
    '['         [reduce using rule 23 (ANYTHING)]
    '{'         [reduce using rule 23 (ANYTHING)]
    '~'         [reduce using rule 23 (ANYTHING)]
    $default    reduce using rule 23 (ANYTHING)

    FUNC_DEF   go to state 76
    OBJECT     go to state 59
    ARRAY      go to state 60
    EXPR_LIST  go to state 77
    EXPR       go to state 62
    FUNC_EXPR  go to state 63
    FUNC_OBJ   go to state 64
    INEXPR     go to state 65
    NUM_EXPR   go to state 66
    TERM       go to state 67
    VAR_TERM   go to state 68
    REGSTR     go to state 69
    UNOOP      go to state 70


State 3

   73 CLASS_DEF: l_class . l_name '{' '}'
   74          | l_class . l_name '{' CLASS_INTERNAL '}'
   75          | l_class . l_name l_extends VAR_TERM '{' '}'
   76          | l_class . l_name l_extends VAR_TERM '{' CLASS_INTERNAL '}'

    l_name  shift, and go to state 78


State 4

  104 VAR_DEF: l_const . VAR_DEF_LIST

    l_name  shift, and go to state 79
    '['     shift, and go to state 80
    '{'     shift, and go to state 81

    VAR_DEF_LIST  go to state 82


State 5

   20 ANYTHING: l_continue . ';'
   21         | l_continue .

    ';'  shift, and go to state 83

    ';'       [reduce using rule 21 (ANYTHING)]
    $default  reduce using rule 21 (ANYTHING)


State 6

  203 TERM: l_delete . VAR_TERM

    l_name   shift, and go to state 15
    l_str    shift, and go to state 71
    l_super  shift, and go to state 21
    l_this   shift, and go to state 23
    l_from   shift, and go to state 32
    '('      shift, and go to state 72
    '['      shift, and go to state 42
    '{'      shift, and go to state 73

    OBJECT    go to state 59
    ARRAY     go to state 60
    VAR_TERM  go to state 84


State 7

   66 DO_WHILE_DEF: l_do . '{' CODE '}' l_while '(' EXPR_LIST ')'

    '{'  shift, and go to state 85


State 8
